[metadata]
name = caesarlinsa
version = 1.0
description-file = README.md
author = caesar
author-email = author@example.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7

[files]
packages =
    caesarlinsa
date_files =
   etc/caesarlinsa = /etc/caesarlinsa/*

[entry_points]
caesar.metering.storage =
    mongodb = caesar.storage.impl_mongodb:Connection

console_scripts =
    caesar-api = caesarlinsa.cmd.api:main