[metadata]
name = caesarlinsa
version = 1.0
description-file = README.md
author = caesar
author-email = author@example.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7

[files]
packages =
    caesar


[entry_points]
caesar.metering.storage =
    mongodb = caesar.storage.impl_mongodb:Connection